--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,65 @@
-version: 2
+version: 2.1
+executors:
+  default:
+    working_directory: ~/
+    docker:
+      - image: node:12
+
+commands:
+  restore_npm:
+    steps:
+      - restore_cache:
+          name: Restore npm dependencies
+          key: npm-{{ checksum "package.json" }}
+
+  save_npm:
+    steps:
+      - save_cache:
+          name: Cache npm dependencies
+          key: npm-{{ checksum "package.json" }}
+          paths:
+            - ~/node_modules
+
 jobs:
-  build:
-    docker: # See https://docs.docker.com/get-started/#docker-concepts if you are new to Docker.
-      - image: circleci/ruby:2.4.1
+  setup:
+    executor:
+      name: default
     steps:
       - checkout
-      - run: echo "A first hello"
+      - run:
+          name: Install dependencies
+          command: npm install
+      - save_npm
+
+  build:
+    executor:
+      name: default
+    steps:
+      - checkout
+      - restore_npm
+      - run: 
+          name: Build
+          command: npm run build
+      - save_npm
+
+  test:
+    executor:
+      name: default
+    steps:
+      - checkout
+      - restore_npm
+      - run: 
+          name: Test
+          command: npm run test
+      - save_npm
+
+workflows:
+  pull-request:
+    jobs:
+      - setup
+      - build:
+          requires:
+            - setup
+      - test:
+          requires:
+            - build
