--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 executors:
   default:
-    working_directory: ~/
+    working_directory: ~/workspace
     docker:
       - image: node:12
 
@@ -18,7 +18,7 @@ commands:
           name: Cache npm dependencies
           key: npm-{{ checksum "package.json" }}
           paths:
-            - ~/node_modules
+            - ~/workspace/node_modules
 
 jobs:
   setup:
